# matrix-data-visualization-DAVIS

./: !Format + one_header.bat  .format_files  CMakeLists.txt  FORMAT_README.txt  LICENSE  README.md  SECURITY.md  _astylerc  auto_format.bat  davis.h  davis_files.txt  davis_launcher.cpp  davis_one_maker.py  main.cpp  make_one_header.bat  warning.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: cmake-multi-platform.yml  cmake_linux.yml  cmake_windows.yml
Tests/: ArrayCoreTest.cpp  CMakeLists.txt  CommonUtilsTest.cpp  PlotlyLibTest.cpp  Test.cpp
Tests/data/: col.csv  readme.txt  small.csv
arrayCore/: CMakeLists.txt  arrayCore.h
array_core/: CMakeLists.txt  array_core.cpp  array_core.h  array_core.h.autosave  configurator.cpp  configurator.h  utils_core.h
common_utils/: CMakeLists.txt  common_constants.cpp  common_constants.h  common_utils.cpp  common_utils.h
davis_one/: davis.cpp  davis.h  davis_.cpp  davis_.h
docs/: FAQ.md  LICENSE.md  README.md  _coverpage.md  _navbar.md  _sidebar.md  c++_examples.md  c++_installation.md  c++_intro.md  c++_usages.md  cmd_examples.md  cmd_installation.md  cmd_intro.md  cmd_usages.md  createLocal.bat  downloads.md  gui_examples.md  gui_installation.md  gui_intro.md  gui_usages.md  index.html  runAtLocal.bat  usages.md
docs/_archieve/: README.md
docs/_includes/: analytics.html
docs/_media/gui/: column.csv  xy.csv
gui/: CMakeLists.txt  about_window.cpp  about_window.h  about_window.ui  davis_gui.cpp  davis_gui.h  davis_gui.ui  main.cpp  qrc_files_restorer.cpp  qrc_files_restorer.h  res.qrc
plotly_maker/: CMakeLists.txt  html_parts.cpp  html_parts.h  plotly-2.32.0.min.js  plotly_maker.cpp  plotly_maker.h
plotty_maker/: CMakeLists.txt  plotty_maker.cpp  plotty_maker.h
